<resources>
    <string name="app_name">玉田</string>
    <string name="hello">Hello World, TestDpsdkCoreActivity!</string>
    <string name="nav_msg_homepage">首页</string>
    <string name="nav_msg_environmental_data">环境数据</string>
    <string name="nav_msg_video_control">视频监控</string>
    <string name="nav_msg_expert">专家诊断</string>
    <!--<string name="nav_msg_product_tracking">产品追溯</string>-->
    <string name="nav_msg_product_tracking">我的</string>
    <string name="title_msg_farming_iot_system">现代农业物联网系统</string>
    <string name="title_wode">我的</string>
    <string name="login_activity_user">用户:</string>
    <string name="login_activity_port">端口:</string>
    <string name="login_activity_ip">IP地址:</string>
    <string name="login_activity_password">密码:</string>
    <string name="login_activity_login">登录</string>
    <string name="login_activity_logout">登出</string>
    <string name="framing_knowledge">新闻公告</string>
    <string name="toolkit_cancel">取消</string>
    <string name="toolkit_confirm">确定</string>
    <string name="msg_sign_in">登录</string>
    <string name="error_msg_username_error">请输入2-20位用户名</string>
    <string name="error_msg_pssword_error">请输入6-20位密码</string>
    <string name="error_msg_password_error_2">输入的密码不正确</string>
    <string name="framing_achievement">休闲旅游</string>


    <!-- Functions activity -->
    <string name="fun_activity_title">Functions</string>
    <string name="RealPlay">Real play</string>
    <string name="Talk">Talk</string>
    <string name="FilePlayBack">Play back by record</string>
    <string name="TimePlayBack">Play back by time</string>
    <string name="Comm">COM Setting</string>
    <string name="CANBus">CAN Setting</string>
    <string name="DevKeepLive">Keep alive setting</string>
    <string name="Alarm">Alarm</string>
    <string name="TestInterface">Interface testing</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="area_select">区域选择：</string>
    <string name="tips_msg_developing">码农正在努力开发中。。。</string>

    <string name="title_data_analysis">数据分析</string>
    <string name="title_real_time_data">实时数据</string>
    <string name="error_nothing_data">没有数据</string>
    <string name="error_nothing_sub_menu">没有子菜单</string>
    <string name="error_get_sub_menu_failure">获取子菜单失败</string>
    <string-array name="tag_layout">
        <!--<item>通用</item>-->
        <item>实时</item>
        <!--<item>回放</item>-->
    </string-array>

    <string-array name="video_source">
        <item>2 设备录像</item>
        <item>3 平台录像</item>
    </string-array>
    <string-array name="video_type">
        <item>0 全部录像</item>
        <item>1 手动录像</item>
        <item>2 报警录像</item>
        <item>3 移动侦测</item>
        <item>4 视频丢失</item>
        <item>5 视频遮挡</item>
        <item>6 定时录像</item>
        <item>7 全天录像</item>
        <item>25 卡号录像</item>
    </string-array>
    <string-array name="video_size">
        <item>1 1/8倍</item>
        <item>2 1/4倍</item>
        <item>4 1/2倍</item>
        <item>8 1倍</item>
        <item>16 2倍</item>
        <item>32 4倍</item>
        <item>48 6倍</item>
        <item>64 8倍</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="scan_barcode_title">条形码扫描</string>
    <string name="scan_qrcode_title">二维码扫描</string>
    <string name="scan_allcode_title">二维码或条形码扫描</string>
    <string name="scan_barcode_hint">将条形码对入取景框，即可自动扫描</string>
    <string name="scan_qrcode_hint">将二维码对入取景框，即可自动扫描</string>
    <string name="scan_allcode_hint">将二维码或条形码对入取景框，即可自动扫描</string>
    <string name="title_activity_sao_mao">SaoMaoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="trace_platform">农产品安全追溯平台</string>

    <color name="line_color">#cccccc</color>
    <color name="edittext_line_color">#000000</color>
    <string name="title_activity_jump_to">JumpToActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="image">图片</string>
    <string name="all_image">所有图片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">无法启用系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="done">完成</string>
    <string name="done_with_count">完成(%1$d/%2$d)</string>
    <string name="image_index">%1$d/%2$d</string>
    <string name="delete">删除</string>
    <string name="deleted_a_photo">删除了一张图片</string>
    <string name="confirm_to_delete">确认删除？</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="undo">撤消</string>
</resources>
